--- a/test-output/index.html
+++ b/test-output/index.html
@@ -103,12 +103,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="rahulshettyacademy.Tests.SubmitOrderTest" class="method navigator-link" hash-for-method="submitOrder(t4163200@gmail.com, Auto@123!, ADIDAS ORIGINAL)">submitOrder(t4163200@gmail.com, Auto@123!, ADIDAS ORIGINAL)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="rahulshettyacademy.Tests.SubmitOrderTest" class="method navigator-link" hash-for-method="submitOrder({password=Auto@123!, email=abhishekmone.12@gmail.com, productName=ZARA COAT 3})">submitOrder({password=Auto@123!, email=abhishekmone.12@gmail.com, productName=ZARA COAT 3})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="rahulshettyacademy.Tests.SubmitOrderTest" class="method navigator-link" hash-for-method="submitOrder(abhishekmone.12@gmail.com, Auto@123!, ZARA COAT 3)">submitOrder(abhishekmone.12@gmail.com, Auto@123!, ZARA COAT 3)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="rahulshettyacademy.Tests.SubmitOrderTest" class="method navigator-link" hash-for-method="submitOrder({password=Auto@123!, email=t4163200@gmail.com, productName=ADIDAS ORIGINAL})">submitOrder({password=Auto@123!, email=t4163200@gmail.com, productName=ADIDAS ORIGINAL})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -131,18 +131,18 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="submitOrder(t4163200@gmail.com, Auto@123!, ADIDAS ORIGINAL)">
-                  </a> <!-- submitOrder(t4163200@gmail.com, Auto@123!, ADIDAS ORIGINAL) -->
+                  <a name="submitOrder({password=Auto@123!, email=abhishekmone.12@gmail.com, productName=ZARA COAT 3})">
+                  </a> <!-- submitOrder({password=Auto@123!, email=abhishekmone.12@gmail.com, productName=ZARA COAT 3}) -->
                   <span class="method-name">submitOrder</span>
-                  <span class="parameters">(t4163200@gmail.com,Auto@123!,ADIDAS ORIGINAL)</span>
+                  <span class="parameters">({password=Auto@123!, email=abhishekmone.12@gmail.com, productName=ZARA COAT 3})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="submitOrder(abhishekmone.12@gmail.com, Auto@123!, ZARA COAT 3)">
-                  </a> <!-- submitOrder(abhishekmone.12@gmail.com, Auto@123!, ZARA COAT 3) -->
+                  <a name="submitOrder({password=Auto@123!, email=t4163200@gmail.com, productName=ADIDAS ORIGINAL})">
+                  </a> <!-- submitOrder({password=Auto@123!, email=t4163200@gmail.com, productName=ADIDAS ORIGINAL}) -->
                   <span class="method-name">submitOrder</span>
-                  <span class="parameters">(abhishekmone.12@gmail.com,Auto@123!,ZARA COAT 3)</span>
+                  <span class="parameters">({password=Auto@123!, email=t4163200@gmail.com, productName=ADIDAS ORIGINAL})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -229,16 +229,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'submitOrder')
 data.setCell(0, 2, 'rahulshettyacademy.Tests.SubmitOrderTest')
-data.setCell(0, 3, 3598);
+data.setCell(0, 3, 370);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'submitOrder')
 data.setCell(1, 2, 'rahulshettyacademy.Tests.SubmitOrderTest')
-data.setCell(1, 3, 3360);
+data.setCell(1, 3, 330);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 700 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -286,24 +286,24 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">submitOrder(abhishekmone.12@gmail.com, Auto@123!, ZARA COAT 3)</span>
-                <span class="method-start">4919 ms</span>
+                <span class="method-name">submitOrder({password=Auto@123!, email=abhishekmone.12@gmail.com, productName=ZARA COAT 3})</span>
+                <span class="method-start">8447 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">8519 ms</span>
+                <span class="method-start">8821 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">launchApplication</span>
-                <span class="method-start">8606 ms</span>
+                <span class="method-start">8923 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">submitOrder(t4163200@gmail.com, Auto@123!, ADIDAS ORIGINAL)</span>
-                <span class="method-start">13731 ms</span>
+                <span class="method-name">submitOrder({password=Auto@123!, email=t4163200@gmail.com, productName=ADIDAS ORIGINAL})</span>
+                <span class="method-start">14082 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">17094 ms</span>
+                <span class="method-start">14413 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
